@@ -1,9 +1,12 @@
+from ftw.mobile import _
 from ftw.mobile.interfaces import IMobileButton
 from plone import api
 from plone.app.layout.viewlets.common import ViewletBase
 from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
 from zope.component import getAdapters
 from zope.component import getMultiAdapter
+from zope.i18n import translate
+import json
 import os
 
 
@@ -47,3 +50,13 @@ class MobileButtonViewlet(ViewletBase):
         context_state = getMultiAdapter((self.context, self.request),
                                         name=u'plone_context_state')
         return context_state.canonical_object().absolute_url()
+
+    def translation_strings(self):
+
+        return json.dumps(
+            {'label_goto_parent': translate(_(u'label_goto_parent',
+                                              default=u'Go to parent content of: '),
+                                            context=self.request),
+             'label_goto_children': translate(_(u'label_goto_children',
+                                                default=u'Go to children of: '),
+                                              context=self.request)})
